<resources>
    <string name="app_name">BeastAlert</string>
    <string name="allthreats">AllThreats</string>
    <string name="threats">Threats</string>
    <string name="description">Beast Alert provides realtime alerts about wild animals in your proximity\nso you can stay safe and secure.\n We are aiming to provide safety to everyone\n affordable,reliable and blah , blah,  blah </string>
    <string name="logo">logo</string>
    <string name="beast_n_alert">BEAST \n ALERT</string>
    <string name="contacts">Contacts</string>
</resources>