<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/whatsapp_image_2023_04_27_at_19_34_59"
    android:orientation="vertical"
    android:padding="10dp"
    android:textAlignment="viewStart"
    android:textDirection="ltr"
    android:visibility="visible"
    tools:context=".MainActivity"
    tools:visibility="visible">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.1"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_weight="1"
                android:contentDescription="@string/logo"
                android:foregroundGravity="right"
                app:srcCompat="@drawable/lion"
                tools:ignore="NestedWeights,RtlHardcoded" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:foregroundGravity="center"
                android:gravity="left"
                android:text="@string/beast_n_alert"
                android:textColor="@color/white"
                tools:ignore="RtlHardcoded" />

        </LinearLayout>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.01" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.1"
            android:foregroundGravity="center"
            android:gravity="center"
            android:text="@string/description"
            android:textAlignment="center"
            android:textColor="#CACACA" />

        <Spinner
            android:id="@+id/Loc"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.1"
            android:background="#DEDEDE" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.1"
            android:gravity="center"
            android:text="@string/threats"
            android:textAlignment="center"
            android:textColor="#9E9E9E"
            android:textSize="34sp" />

        <ScrollView
            android:id="@+id/AllThreats"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.6"
            android:contentDescription="@string/allthreats" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>